--- a/style.css
+++ b/style.css
@@ -14,16 +14,13 @@ body {
     align-items: center;
     height: 100vh;
 }
-
 #wrapper {
-    width: 80%;
-    max-width: 600px;
+    width: 800px;
+    padding: 39px 20px 20px 20px;
     background: #fff;
-    padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
-
 #quiz {
     text-align: center;
 }
@@ -86,10 +83,10 @@ body {
 .timer {
     border-radius: 50%;
     position: absolute;
-    background-color:brown;
+    background-color: brown;
     color: white;
-    padding: 7px 8px;
-    top: 89px;
-    left: 393px;
+    padding: 12px 10px;
+    top: 190px;
+    right: 301px;
     font-size: 29px;
 }
